[gd_scene load_steps=2 format=3 uid="uid://b6eno0c6fhadl"]

[ext_resource type="Script" path="res://free_hour.gd" id="1_88i0o"]

[node name="GridSpot" type="ColorRect"]
custom_minimum_size = Vector2(150, 90)
color = Color(0.317647, 0.317647, 0.317647, 1)
script = ExtResource("1_88i0o")

[node name="gd" type="ColorRect" parent="."]
z_index = -1
offset_top = 85.0
offset_right = 150.0
offset_bottom = 133.0
mouse_filter = 2

[node name="clr" type="ColorRect" parent="."]
visible = false
z_index = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 145.0
offset_bottom = 85.0
mouse_filter = 2

[node name="gr" type="ColorRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = 145.0
offset_right = 190.0
offset_bottom = 90.0
mouse_filter = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
